Sigil v0.1.1 <ADD DATE>
	- fixed an issue when sometimes switching between views didn't enable/disable appropriate actions
	- fixed an issue with mixed-up CSS classes on Mac and Linux (issue #16)
	- added line numbering for Code View (issue #9)
	- added current line highlighting for Code View 
	- fixed crashed bug with some calibre generated epubs (issue #16)

Sigil v0.1.0  2009.8.1.
	- initial release